[project]
name = "critique-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.1.0",
    "isort>=8.0.0",
    "langchain>=1.2.10",
    "langchain-openapi>=0.1.1",
    "langgraph>=1.0.9",
    "python-dotenv>=1.2.1",
]
